rename Cray to scalable vectors

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -647,13 +647,13 @@ comes from.
 # Unresolved questions
 [unresolved]: #unresolved-questions
 
-### Interaction with Cray vectors
+### Interaction with scalable vectors
 
 The vector types proposed in this RFC are packed, that is, their size is fixed
 at compile-time.
 
 Many modern architectures support vector operations of run-time size, often
-called Cray Vectors or scalable vectors. These include, amongst others, NecSX,
+called scalable Vectors or scalable vectors. These include, amongst others, NecSX,
 ARM SVE, RISC-V Vectors. These architectures have traditionaly relied on
 auto-vectorization combined with support for explicit vectorization annotations,
 but newer architectures like ARM SVE and RISC-V introduce explicit vectorization
@@ -696,12 +696,12 @@ fn add_constant(dst: &mut [f64], src: &[f64], c: f64) {
 
 RISC-V proposes a model smilar in spirit, but not identical to the ARM SVE one.
 It would not be surprising if other popular architectures offered similar but
-not identical explicit vectorization models for Cray vectors in the future.
+not identical explicit vectorization models for scalable vectors in the future.
 
 Notice that while the API of scalable vectors is similar to that of packed
 vectors, there are some important differences
 
-The number of lanes is only known at run-time. That is, Cray Vectors are types
+The number of lanes is only known at run-time. That is, scalable vectors are types
 of run-time size and it is unclear at this point of `mem::size_of::<f64xN>()`
 will be able to return anything meaningful at compile-time or not (maybe they
 might be "pointer sized", @eddyb?).
@@ -716,13 +716,13 @@ performed on elements that aren't part of the vector. This encourages a
 different API than that of packed vectors.
 
 At these point in time it is still unclear how the current APIs actually work in
-practice and designing a portable API for Cray vectors is an open research
+practice and designing a portable API for scalable vectors is an open research
 problem. 
 
 As shown above, such an API could be made to look "similar", but probably not
 identical. This RFC does not prevent adding such an API in the future. 
 
-Providing a portable API for both packed and Cray vectors is thus
+Providing a portable API for both packed and scalable vectors is thus
 out-of-scope for this RFC. 
 
 At this point in time, whether packed and scalable vector types can interact
