reword unresolved scalable vectors issue

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -698,37 +698,24 @@ RISC-V proposes a model smilar in spirit, but not identical to the ARM SVE one.
 It would not be surprising if other popular architectures offered similar but
 not identical explicit vectorization models for scalable vectors in the future.
 
-Notice that while the API of scalable vectors is similar to that of packed
-vectors, there are some important differences
+The main differences between scalable and portable vectors are that:
 
-The number of lanes is only known at run-time. That is, scalable vectors are types
-of run-time size and it is unclear at this point of `mem::size_of::<f64xN>()`
-will be able to return anything meaningful at compile-time or not (maybe they
-might be "pointer sized", @eddyb?).
+* the number of lanes of scalable vectors is a run-time dynamic value 
+* the scalable vector "objects" are like magical compiler token values
+* the induction loop variable must be incremented by the dynamic number of lanes
+  of the vector type
+* most scalable vector operations require a mask indicating which elements of
+  the vector the operation applies to
+  
+These differences will probably force the API of scalable vector types to be
+slightly different than that of packed vector types.
 
-This affects how they are used. First, the induction loop variable is
-incremented with a dynamic value. (@eddyb does a stride that changes across loop
-iterations make sense here? Some architectures might do that?)
+The current RFC therefore assumes no interaction with scalable vector types. 
 
-Second, in these architectures most operations require a mask that indicate
-which elements are part of the vector and which aren't. The operations are not
-performed on elements that aren't part of the vector. This encourages a
-different API than that of packed vectors.
-
-At these point in time it is still unclear how the current APIs actually work in
-practice and designing a portable API for scalable vectors is an open research
-problem. 
-
-As shown above, such an API could be made to look "similar", but probably not
-identical. This RFC does not prevent adding such an API in the future. 
-
-Providing a portable API for both packed and scalable vectors is thus
-out-of-scope for this RFC. 
-
-At this point in time, whether packed and scalable vector types can interact
-with each other is unknown (TODO: how does SVE interact with ASIMD/NEON? I can't
-find anything about this online anywhere), and so is how this interaction would
-look like iff they could interact.
+It does not prevent for portable scalable vector types to be added to Rust in
+the future via an orthogonal API, nor it does prevent adding a way to interact
+between both of them (e.g. through memory). But at this point in time whether
+these things are possible are open research problems.
 
 ### Half-float support
 
