move critical issues to the front

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -3,6 +3,131 @@
 - RFC PR: (leave this empty)
 - Rust Issue: (leave this empty)
 
+# Critical open issues
+
+### Bitcasts and conversions
+
+From/Into/FromBits/IntoBits are too controversial, but these operations are
+required for this API to be useful: converting between vector types is an
+extremely common operation, and also required for interfacing with the
+architecture-specific types in `std::arch`
+
+TODO: `From`/`Into` are lossless. What we actually want here is `as` casts.
+Implementing `From`/`Into`` here with a different meaning is not going to
+survive the RFC process. The alternative was `.as_f32x4()` methods, but that was
+painful to implement and use.
+
+TODO: `f32::from_bits` takes a `u32`, if we were to add these as methods we'd
+need to add a bunch of them for each type as well `__m128::from_bits_{f32x4,
+...}`..
+
+
+
+### Clarify ABI and vector calling convention
+
+TODO: this part of the RFC is not written yet
+
+### Some operations with run-time indices are weird:
+
+TODO: @sunfish commented that `new` lowers to a memory load even when all
+arguments are constant. This is inefficient, and probably something to be
+discouraged (people should be doing a load here, or a sequence of replaces). 
+
+OTOH @gnzlbg finds this useful, but that might be because it is useful inside
+`stdsimd` to write tests and short examples, but arguably it is not something
+used by high-performance code.
+
+
+It might thus make sense to:
+
+* have a way to construct these from compile-time constants
+* use that way to construct these when all arguments to `new` are constants
+* either require the arguments of `new` to be constants, or add a way that
+  requires this, like a literal syntax for the simd types: `f32x4(1., 2., 3.,
+  4.)` that requires all input arguments to be compile-time constants.
+  
+Skimming through `stdsimd` I can't find a single place where `new` is used with
+non-constant arguments.
+
+TODO: @sunfish mentions that he is not aware of any hardware that supports
+dynamic indexing into vector elements:
+
+> It's not horrible, but it's not a SIMD operation. It's a memory operation, and
+> Rust can already do it. Just create a [f32; 4], store the vector there, index it
+> yourself, and the compiler should generate the same code. If this were a common
+> operation, it'd be nice to have a convenient API to do it automatically, but as
+> far as I know it isn't (otherwise we might have hardware for it ;-)). And that
+> way, you don't need the `_unchecked` versions, because users can do whatever
+> unsafe thing they want with memory themselves.
+
+So in a nutshell we might want to require the arguments of `new` and
+`extract`/`store`/`replace` to be `const`s. The problem would be that we can't
+use the `constify!` techniques here that the immediate-mode arguments use in
+`std::arch`, so maybe we'll need to make these be macros for now.
+
+
+* `extract` / `replace` / `store` should probably require the index to be a compile-time constant.
+
+* the `vec::new()` constructors should lower to an `llvm::ConstantVector` when
+  their arguments are compile-time constants
+  
+* this removes the need for the unchecked mehtods  
+
+### Endianness issues
+
+TODO: @sunfish gave the following comment: If the bitwise casts can convert
+between vectors with different numbers of elements (eg. between `i8x16` and
+`i16x8`), the results will depend on the endianness of the machine.
+
+TODO: @sunfish gave the following comment: need to document how big-endian does
+things wrt load/stores aligned/unaligned.
+
+(also related to bitcasts)
+
+Endianness applies to the bytes in a lane and to the lanes within a vector.
+
+The following asserts would pass/fail depending on endianness:
+
+```rust
+let v = i32x4::new(0, 1, 2, 3);
+assert_eq!(v.extract(0), 0); // OK in LE - ERROR in BE
+assert_eq!(v.extract(3), 0); // ERROR in LE - OK in BE
+```
+
+and the same would apply to `store` and `replace`. It also affects bit casts
+like from `u16x8` to `u8x16` (which value goes where?).
+
+There are many options:
+
+* make endianness machine specific: this would make the vector types not
+  portable anymore, because asserts like those above would fail or pass dependin
+  on endianness.
+  
+* renumber indices: if `extract`, `store`, and `replace` would take compile-time
+  indices, we could easily re-number them in big-endian machines to make the
+  asserts in the code above pass.
+
+### Fast math
+
+This does not necessarily need to be fixed in this RFC, but we should start
+thinking about how to deal with fast math in Rust because fast-math can
+significantly impact the "quality" of the generated vector code.
+
+# Things we might want to remove
+
+We could provide useful enough types, and implementation of the traits that are
+part of the std library because users cannot provide these themselves. 
+
+Anything else can be provided as a third party library.
+
+### Reductions
+
+Remove reductions from this iteration of the RFC - provide only the types,
+enough methods to make them useful, and trait implementations that users
+cannot provide themselves.
+
+They are controversial because of overflow and NaNs (see below).
+
 # Summary
 [summary]: #summary
 
@@ -67,7 +192,7 @@ With portable packed vector types we can do much better
 fn main() {
     let a = f32x4::new(1., 2., 3., 4.);
     let b = f32x4::new(5., 6., 7., 8.);
-    let r = (a + b).sum();
+    let r = (a + b).h_sum();
     assert_eq!(r, 36.);
 }
 ```
@@ -85,15 +210,6 @@ sequence:
 And this is key: these types add zero-overhead over the architecture-specific
 types for the operations that they support - if there is an architecture in
 which this does not hold for some operation: the implementation has a bug.
-
-TODO: @sunfish this implies that in some arch we might need to lower `(a +
-b).sum()` into a single instruction. That is, every single piece of this API
-must be something that the backend understands :/
-
-TODO: @alex an alternative would be to not say anything here about
-zero-overhead, that is, while we might be able to guarantee some overhead in
-some cases, we can't really work around backed bugs in lowering combinations of
-operations like `(a + b).sum()`.
 
 # Guide-level explanation
 [guide-level-explanation]: #guide-level-explanation
@@ -119,14 +235,14 @@ Operations on vector types can be either:
   the corresponding lane of `b`, while `a.lt(b)` returns a vector of "bools"
   indicating whether the `lt` (less-than: `<`) for each lane returned `true` or
   `false`. Most vertical operations are binary operations (they take two input
-  vectors). These operations are typically very fast - this is how vectors should
-  be used.
+  vectors). These operations are typically very fast - this is how vectors
+  should be used.
   
 * horizontal: that is, along a vector. Horizontal operations are unary, that is,
-  they take one input vector. For example, `a.sum()` adds the elements of the
-  vector together and `a.max()` returns the largest element in the vector. These
-  operations are typically slower than vertical operations but in some cases
-  they are necessary.  
+  they take one input vector. For example, `a.h_sum()` adds the elements of the
+  vector together and `a.h_max()` returns the largest element in the vector.
+  These operations are typically slower than vertical operations but in some
+  cases they are necessary.
   
 # Reference-level explanation
 [reference-level-explanation]: #reference-level-explanation
@@ -147,9 +263,6 @@ So that `u16x8` reads "a SIMD vector of eight packed 16-bit wide unsigned
 integers". The width of a vector can be computed by multiplying the
 `{lane_width}` times the `{number_of_lanes}`. For `u16x8`, 16 x 8 = 128, so
 this vector type is 128 bits wide.
-
-> Note: this nomenclature follows closely the nomenclature used by ARM in their
-> vector types: <type><size>x<number of lanes>_t
 
 This RFC proposes adding all vector types with sizes in range [16, 256] bit to
 the `std::simd` module, that is:
@@ -194,11 +307,12 @@ the `std::simd` module, that is:
   * `u64x4`
   * `f64x4`
 
-Note that:
+The following issues are part of the Unresolved Question sections and will need
+to be resolved by future RFCs:
 
-* half-float (`f16`) vectors (and half-floats in general) will need to be
-  covered by future RFCs to support ARM/AArch64/PowerPC64/... intrinsics
-* 512-bit wide vectors and masks will need to be covered once `std::arch` adds AVX-512 support
+* half-float (`f16`) vectors (and half-floats in general) are part of the vendor
+  APIs of ARM, AArch64, PowerPC64, RISC-V, MIPS, and others.
+* 512-bit wide vectors and masks will need to be covered once `std::arch` adds AVX-512 support.
 * vectors with 128-bit wide elements (`{i,u,f}128x1`, `{i,u,f}128x2`) will need
   to be covered once `std::arch` adds PowerPC support.
 
@@ -232,10 +346,9 @@ All signed and unsigned integer vectors also implement:
 * `Eq`: equivalent to `PartialEq<Self>`
 * `Ord`: equivalent to `PartialOrd<Self>`
 * `Hash`: equivalent to `Hash` for `[element_type; number_of_elements]`.
-* `fmt::LowerHex`: formats the vector as hexadecimal.
-* TODO: `fmt::UpperHex`: formats the vector as hexadecimal.
-* TODO: `fmt::Octal`: formats the vector as an octal number.
-* TODO: `fmt::Binary`: formats the vector as binary number.
+* `fmt::LowerHex`/`fmt::UpperHex`: formats the vector as hexadecimal.
+* `fmt::Octal`: formats the vector as an octal number.
+* `fmt::Binary`: formats the vector as binary number.
 * `Not<Output=Self>`,`BitAnd<Output=Self>`, `BitOr<Output=Self>`,
   `BitXor<<Output=Self>`, `BitAndAssign`, `BitOrAssign`,
   `BitXorAssign`: lane-wise bitwise operations.
@@ -293,52 +406,12 @@ pub unsafe fn replace_unchecked(self, index: usize,
 }
 ```
 
-TODO: @sunfish commented that `new` lowers to a memory load even when all
-arguments are constant. This is inefficient, and probably something to be
-discouraged (people should be doing a load here, or a sequence of replaces). 
-
-OTOH @gnzlbg finds this useful, but that might be because it is useful inside
-`stdsimd` to write tests and short examples, but arguably it is not something
-used by high-performance code.
-
-It might thus make sense to:
-
-* have a way to construct these from compile-time constants
-* use that way to construct these when all arguments to `new` are constants
-* either require the arguments of `new` to be constants, or add a way that
-  requires this, like a literal syntax for the simd types: `f32x4(1., 2., 3.,
-  4.)` that requires all input arguments to be compile-time constants.
-  
-Skimming through `stdsimd` I can't find a single place where `new` is used with
-non-constant arguments.
-
-TODO: @sunfish mentions that he is not aware of any hardware that supports
-dynamic indexing into vector elements:
-
-> It's not horrible, but it's not a SIMD operation. It's a memory operation, and
-> Rust can already do it. Just create a [f32; 4], store the vector there, index it
-> yourself, and the compiler should generate the same code. If this were a common
-> operation, it'd be nice to have a convenient API to do it automatically, but as
-> far as I know it isn't (otherwise we might have hardware for it ;-)). And that
-> way, you don't need the `_unchecked` versions, because users can do whatever
-> unsafe thing they want with memory themselves.
-
-So in a nutshell we might want to require the arguments of `new` and
-`extract`/`store`/`replace` to be `const`s. The problem would be that we can't
-use the `constify!` techniques here that the immediate-mode arguments use in
-`std::arch`, so maybe we'll need to make these be macros for now.
-
 #### Lane-wise casts and bitwise conversions
 [casts-and-conversions]: #casts-and-conversions
 
 The portable vector types implement lane-wise and bitwise casts.
 
 ##### Lane-wise casts
-
-TODO: `From`/`Into` are lossless. What we actually want here is `as` casts.
-Implementing `From`/`Into`` here with a different meaning is not going to
-survive the RFC process. The alternative was `.as_f32x4()` methods, but that was
-painful to implement and use.
 
 Vectors with identical number of lanes can be converted into each other by
 performing lane-wise `as` casts provided by the `From` and `Into` traits. 
@@ -354,10 +427,6 @@ These conversions are provided across all portable vector types having the same
 number of lanes.
 
 ##### Bitwise casts
-
-TODO: `f32::from_bits` takes a `u32`, if we were to add these as methods we'd
-need to add a bunch of them for each type as well `__m128::from_bits_{f32x4,
-...}`..
 
 To interface with the architecture-specific vector types and intrinsics it is
 often required to perform lossless bitwise casts from one type to another.
@@ -376,10 +445,6 @@ let y: __m128 = x.into_bits();
 These conversions are provided across all portable vector types of the same
 width, and across the portable vector types and the architecture-specific vector
 types.
-
-TODO: @sunfish gave the following comment: If the bitwise casts can convert
-between vectors with different numbers of elements (eg. between `i8x16` and
-`i16x8`), the results will depend on the endianness of the machine.
 
 #### Loads and Stores
 
@@ -452,9 +517,6 @@ pub unsafe fn load_unaligned_unchecked(slice: &[element_type]) -> Self;
 }
 ```
 
-TODO: @sunfish gave the following comment: need to document how big-endian does
-things.
-
 #### Arithmetic reductions 
 
 All portable vector types implement the following methods:
@@ -463,10 +525,10 @@ All portable vector types implement the following methods:
 impl {element_type}{lane_width}x{number_of_lanes} {
 
 /// Horizontal sum of the vector elements.
-pub fn sum(self) -> element_type;
+pub fn h_sum(self) -> element_type;
 
 /// Horizontal product of the vector elements.
-pub fn product(self) -> element_type;
+pub fn h_product(self) -> element_type;
 
 }
 ```
@@ -504,7 +566,7 @@ let mut val: f32 = vec.extract(0);
 for i in 1..f32x4::lanes() {
     val += vec.extract(i);
 }
-assert_eq!(val, vec.sum()); // MAYBE FAILS
+assert_eq!(val, vec.h_sum()); // MAYBE FAILS
 ```
 
 TODO: AFAICT the LLVM reductions don't do a tree reduction, but I should
@@ -519,13 +581,13 @@ All signed and unsigned integer vectors implement the following methods:
 impl {element_type}{lane_width}x{number_of_lanes} {
 
 /// Horizontal bitwise `and` of the vector elements.
-pub fn and(self) -> element_type;
+pub fn h_and(self) -> element_type;
 
 /// Horizontal bitwise `or` of the vector elements.
-pub fn or(self) -> element_type;
+pub fn h_or(self) -> element_type;
 
 /// Horizontal bitwise `xor` of the vector elements.
-pub fn xor(self) -> element_type;
+pub fn h_xor(self) -> element_type;
 
 }
 ```
@@ -538,10 +600,10 @@ All portable vector types implement the following methods:
 impl {element_type}{lane_width}x{number_of_lanes} {
             
 /// Value of the largest element in the vector.
-pub fn max(self) -> element_type;
+pub fn h_max(self) -> element_type;
 
 /// Value of the smallest element in the vector.
-pub fn min(self) -> element_type;
+pub fn h_min(self) -> element_type;
 
 }
 ```
@@ -605,25 +667,39 @@ IIRC this is currently disallowed. Is there an issue for this?
 # Drawbacks
 [drawbacks]: #drawbacks
 
-The main drawback is that in a future where Rust has multiple backends,
-providing this types will take some work. Most backeds support vector types in
-one form or another, and if the backend supports the architecture-specific
-vector types exposed by `std::arch` chances are that very little work will
-actually be required to support this.
+## Generic vector type requirement for backends
 
-TODO: @sunfish? However, the zero-overhead requirement requires the backend to
-be able to optimize sequences of operations in architectures that support them.
-For example, imagine that a future architecture would provide a `add_and_reduce`
-instruction for float vectors. In that architecture, `(a + b).sum()` would need
-to be lowered to that single instruction. This is not something that can be
-worked around in a library implementation, but rather something that needs
-compiler and backend support.
+The `std::arch` module provides architecture specific vector types where
+backends only need to provide vector types for the architectures that they
+support.
 
-TODO: @sunfish? Another drawback is that depending on the features enabled and
-the architecture, some of the operations exposed here are slow. As in, the
-backed will currently generate scalar code that operates on the vector using
-extract + replace. Is it possible for backends to transform vector operations
-back to scalar code that's "efficient" (e.g. a loop)?
+This RFC require backends to provide generic vector types. Most backends support
+this in one form or another, but if one future backend does not, this RFC can be
+implemented on top of the architecture specific types.
+
+## Zero-overhead requirement for backends
+
+A future architecture might have an instruction that performs multiple
+operations exposed by this API in one go, like `(a + b).h_sum()` on a `f32x4`
+vector. The zero-overhead requirement makes it a bug if Rust does not generate
+optimal code for this situation.
+
+This is not a performance bug that can be easily worked around in `stdsimd` or
+`rustc`, making this almost certainly a performance bug in the backend.
+
+It is reasonable to assume that every optimizing Rust backed will have a
+pattern-matching engine powerful enough to perform these
+transformations, but it is worth it to keep this requirement in mind.
+
+## Performance of this API might vary dramatically
+
+The performance of this API can vary dramatically depending on the architecture
+being targeted and the target features enabled.
+
+First, this is a consequence of portability, and thus a feature. However, that
+portability can introduce performance bugs is a real concern. In any case, if
+the user is able to write faster code for some architecture, they should fill a
+performance bug.
 
 # Rationale and alternatives
 [alternatives]: #alternatives
@@ -719,11 +795,13 @@ these things are possible are open research problems.
 
 ### Half-float support
 
-Many vector intrinsics on many architectures operates on vectors of half-floats
-(`f16`) types. It is unclear what to do with these as this point since the `f16`
-type is even less portable than the `{i,u}128` types.
+Many vector intrinsics on many architectures (ARM,Power,MIPS,RISC-V) operates on
+vectors of half-floats (`f16`) types. It is unclear what to do with these as
+this point since the `f16` type is even less portable than the `{i,u}128` types.
 
 Initially they will be explored as architecture-specific vector types. Whether
 vectors of `f16` types can be made portable or not remains to be explored.
 
 ### 512-bit vector types and masks
+
+* TODO: what's the problem with the AVX-512 masks .
