fix links, add example

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -135,15 +135,16 @@ latency, and more. There are many crates in the Rust ecosystem using simd
 intrinsics today, either through `stdsimd`, the `simd` crate, or both. Some
 examples include:
 
-* [`encoding_rs`]() which uses the `simd` crate to assist with speedy decoding.
-* [`bytecount`] which uses the `stdsimd` crate with AVX2 extensions to
-accelerate counting bytes.
-* [`regex`] which uses the `stdsimd` crate with SSSE3 extensions to accelerate
-multiple substring search and also the parent crate `teddy`.
+* [`encoding_rs`](https://github.com/hsivonen/encoding_rs) which uses the `simd`
+  crate to assist with speedy decoding.
+* [`bytecount`](https://github.com/llogiq/bytecount) which uses the `simd` crate
+with AVX2 extensions to accelerate counting bytes.
+* [`regex`](https://github.com/rust-lang/regex) which uses the `stdsimd` crate
+with SSSE3 extensions to accelerate multiple substring search and also the
+parent crate `teddy`.
 
 However, provideing portable SIMD algorithms for all application domains is not
 the intent of this RFC.
-
 
 The purpose of this RFC is to provide users with vocabulary types and
 fundamental operations that they can build upon in their own crates to
@@ -314,9 +315,25 @@ The performance could by further improved by requiring the input data to be
 aligned to a 16-byte boundary, and/or by handling the elements before the next
 16-byte boundary in a special way.
 
-# Example: Conditional saxpy
+# Example: scalar multipy even
 
-TODO
+Lets implement a function that multiplies the even elements of a vector with a
+scalar:
+
+```rust
+fn mul_even(a: f32, x: f32x4) -> f32x4 {
+    // Create a mask for the even elements 0 and 2:
+    let m = m32x4::new(true, false, true, false);
+
+    // Perform a full multiplication
+    let r = f32x4::splat(a) * x;
+    
+    // Use the mask to select the even elements from the
+    // multiplication result and the odd elements from
+    // the input:
+    m.select(r, x)
+}
+```
 
 # Example: Matrix multiplication
 
