--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -335,9 +335,24 @@ fn mul_even(a: f32, x: f32x4) -> f32x4 {
 }
 ```
 
-# Example: Matrix multiplication
+# Example: 4x4 Matrix multiplication
 
-TODO
+TODO: ...
+
+```rust
+fn mul4x4(a: [f32x4; 4], b: [f32x4; 4]) -> [f32x4; 4] {
+    let r = [f32x4::splat(0.); 4];
+    
+    for i in 0..4 {
+        r[i] = 
+            a[0] * shuffle!(b[i], [0,0,0,0]) + 
+            a[1] * shuffle!(b[i], [1,1,1,1]) +
+            a[2] * shuffle!(b[i], [2,2,2,2]) +
+            a[3] * shuffle!(b[i], [3,3,3,3]);
+    }
+    r
+}
+```
   
 # Reference-level explanation
 [reference-level-explanation]: #reference-level-explanation
