--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -860,7 +860,7 @@ implements this using a sealed trait.
 All vector types implement the following vertical (lane-wise) comparison methods
 that returns a mask expressing the result.
 
-```
+```rust
 impl {element_type}{lane_width}x{number_of_lanes} {
 /// Lane-wise equality comparison.
 pub fn eq(self, other: $id) -> m{lane_width}x{number_of_lanes};
